--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,7 +1,13 @@
 body{
     margin: 0;
     padding: 0;
+    display: inline;
     font-family: "Manrope", sans-serif;
     font-size: 15px;
     width: 500px;
+}
+#git-header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
