--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -11,3 +11,15 @@ body{
     flex-direction: column;
     align-items: center;
 }
+/*  What is Git style*/
+.what-git{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    background: #f7f7f5;
+}
+.git-img{
+    width: 800px;
+    margin: 5px auto 20px auto;
+}
