--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -65,3 +65,17 @@ a{
     padding: 0 6px;
     width: 400;
 }
+.branch-float{
+    margin-left: 15px;
+    margin-right: 30px;
+}
+h3{
+    font-size: 15px;
+    display: flex;
+    justify-content: left;
+}
+.paragragh{
+    float: left;
+    font-size: 12px;
+    width:300px;
+}
