--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -51,3 +51,16 @@ label{
     margin: 8px 0;
     background: #f2f2f2;
 }
+/* T-shirt size */
+.tshirt{
+    display: flex;
+    justify-content: left;
+    padding-left: 20px;
+}
+#size{
+    display: center;
+    justify-content: center;
+    font-size: 15px;
+    font-weight: 700px;
+    margin-left:25px;
+}
