--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -64,3 +64,9 @@ label{
     font-weight: 700px;
     margin-left:25px;
 }
+/*  T-Shirt color */
+.radio{
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+}
